--- a/SpMVC_20_BBS_Final/src/main/webapp/WEB-INF/views/include/include-head.jspf
+++ b/SpMVC_20_BBS_Final/src/main/webapp/WEB-INF/views/include/include-head.jspf
@@ -12,11 +12,29 @@
 	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+<!-- include summernote css/js -->
+<link
+	href="https://cdn.jsdelivr.net/npm/summernote@0.8.16/dist/summernote.min.css"
+	rel="stylesheet">
+<script
+	src="https://cdn.jsdelivr.net/npm/summernote@0.8.16/dist/summernote.min.js"></script>
+<script src="${rootPath}/js/summernote-ko-KR.js?ver2020-02-27"></script>
 <style>
+@font-face {
+	font-family: '777Balsamtint';
+	src:
+		url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_nine_@1.1/777Balsamtint.woff')
+		format('woff');
+	font-weight: normal;
+	font-style: normal;
+}
+
 * {
+	font-family: 777Balsamtint;
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	margin: 0;
 }
 
 body {
