--- a/SpMVC_20_BBS_Final/src/main/webapp/WEB-INF/views/include/include-head.jspf
+++ b/SpMVC_20_BBS_Final/src/main/webapp/WEB-INF/views/include/include-head.jspf
@@ -18,6 +18,10 @@
 	rel="stylesheet">
 <script
 	src="https://cdn.jsdelivr.net/npm/summernote@0.8.16/dist/summernote.min.js"></script>
+<link rel="stylesheet"
+	href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+	integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
+	crossorigin="anonymous">
 <script src="${rootPath}/js/summernote-ko-KR.js?ver2020-02-27"></script>
 <style>
 @font-face {
