css 수정 포트폴리오 홈 넣기

--- a/SpMVC_27_Secure_V5/src/main/webapp/resources/css/admin_main.css
+++ b/SpMVC_27_Secure_V5/src/main/webapp/resources/css/admin_main.css
@@ -1,23 +1,23 @@
 
-#body {
-	
+#body-section {
+	justify-content:center;
 	position: fixed;
 	top: 60px;
 	width: 100%;
 
 }
 
-#body menu {
+#body-section menu {
 	
 
 	margin: 5px;
 }
 
-#body menu li {
+#body-section menu li {
 	list-style: none;
 }
 
-#body menu li a {
+#body-section menu li a {
 	display: inline-block;
 	padding: 5px 10px;
 	text-decoration: none;
@@ -26,12 +26,12 @@
 	color: black;
 }
 
-#body menu li a:hover {
+#body-section menu li a:hover {
 	background-color: black;
 	color: white;
 }
 
-#body article {
+#body-section article {
 
 	margin: 5px;
 }
