--- a/SpMVC_27_Secure_V5/src/main/webapp/WEB-INF/views/include/include-nav.jspf
+++ b/SpMVC_27_Secure_V5/src/main/webapp/WEB-INF/views/include/include-nav.jspf
@@ -5,45 +5,8 @@
 <%@ taglib uri="http://www.springframework.org/security/tags"
 	prefix="sec"%>
 <%@ taglib uri="http://www.springframework.org/tags/form" prefix="form"%>
-<style>
-* {
-	box-sizing: border-box
-}
-
-body {
-	width: 100%;
-	display: flex;
-	margin: 0 auto;
-}
-
-#navbar {
-	background-color: #0062cc;
-	position: fixed;
-	top: 0;
-	width: 100%;
-	display: flex;
-	transition: top 0.3s;
-}
-
-#navbar a {
-	flex: 0 1 auto;
-	display: block;
-	color: white;
-	text-align: center;
-	padding: 1rem;
-	text-decoration: none;
-	font-size: 1.2rem;
-}
-
-#navbar a:hover {
-	background-color: white;
-	color: #0062cc;
-}
-
-#navbar a:nth-child(4) {
-	margin-left: 0 auto;
-}
-</style>
+<link rel="stylesheet"
+	href="${rootPath}/resources/css/nav.css?2020-04-09" />
 <script>
 	$(function() {
 
@@ -71,21 +34,19 @@ body {
 	})
 </script>
 <nav id="navbar">
-	<a href="${rootPath}/">HOME</a>
-	 <a href="#">성적처리</a> 
-	<a href="#">독서록관리</a>
+	<a href="${rootPath}/">LEE JEONG YEON</a>
+
 	<sec:authorize access="isAnonymous()">
 		<a href="${rootPath}/user/login">로그인</a>
-	</sec:authorize>
-	<sec:authorize access="isAuthenticated()">
-
-		<a href="javascript:void(0)" class="logout">로그아웃</a>
-
-		<a href="${rootPath}/user/mypage">MY PAGE</a>
 	</sec:authorize>
 	<sec:authorize access="hasRole('ROLE_ADMIN')">
 		<a href="${rootPath}/admin">관리자 홈</a>
 	</sec:authorize>
+	<sec:authorize access="isAuthenticated()">
+		<a href="${rootPath}/user/mypage">MY PAGE</a>
+		<a href="javascript:void(0)" class="logout">로그아웃</a>
+	</sec:authorize>
+
 </nav>
 
 
